@@ -14,6 +14,10 @@ PHP                                                                        NEWS
   . Fixed bug #80002 (calc free space for new interned string is wrong).
     (t-matsuno)
 
+- PDO:
+  . Fixed bug #80027 (Terrible performance using $query->fetch on queries with
+    many bind parameters (Matteo)
+
 - Standard:
   . Fixed bug #79986 (str_ireplace bug with diacritics characters). (cmb)
 
